src/scss/obsidian/settings.scss
.mod-settings .vertical-tab-content > .setting-item:nth-child(2) > .setting-item-control > input[type="color"] {
	visibility: hidden;
	width: 300px;
}

.mod-settings .vertical-tab-content > .setting-item:nth-child(2) > .setting-item-control .lucide-rotate-ccw {
	display: none;
}

.mod-settings .vertical-tab-content > .setting-item:nth-child(2) > .setting-item-control > input[type="color"]::before {
	visibility: visible;
	content: "The accent color is overridden by the theme. Use the Style Settings Plugin to customize theme colors.";
	color: var(--text-error);
	font-family: var(--font-interface);
	font-size: var(--font-ui-smaller);
	line-height: 1.3;
	position: relative;
}


.view-content .style-settings-container .setting-item:not(.setting-item-heading) {
	flex-direction: row;
}


.community-item.is-selected {
	border-color: var(--interactive);
	background-color: var(--background-primary);
	color: var(--text-normal);

	.community-item-author,
	.community-item-downloads {
		color: var(--text-muted);
		opacity: 1;
	}
}

.community-item.is-selected:hover,
.community-item:hover {
	background-color: var(--background-modifier-hover);
	color: var(--text-normal);


	.community-item-author,
	.community-item-downloads {
		color: var(--text-muted);
		opacity: 1;
	}
}

.style-settings-container {
	padding-left: 16px;
}

.themed-color-wrapper > div {
	padding: 4px;
}

